# NCAABracketMaker

./: .gitignore  .pre-commit-config.yaml  AnalyzeGame.py  BracketBuilder.py  Dockerfile  LICENSE  MLCoefficients.py  ModelScripts.py  README.md  TeamData.py  code1.py  pyproject.toml  requirements-update.sh  requirements.in  requirements.txt  requirements_test-update.sh  requirements_test.in  requirements_test.txt  run.py  setup.cfg  setup.py  test.py  tox.ini  utilities.py
.github/workflows/: main.yml  tests.yml
Brackets/: Big_Dance_CSV.csv  Bracket2021.yaml  BracketOrder.yaml  NCAAMBracket2021.yaml  NCAAWBracket2021.yaml
NCAABracketMaker/: AnalyzeGame.py  BracketBuilder.py  Example.py  MLCoefficients.py  ModelScripts.py  TeamData.py  __init__.py  __main__.py  run.py  utilities.py
NCAABracketMaker/Brackets/: NCAAMBracket2021.yaml  NCAAMBracket2022.yaml  NCAAMBracket2023.yaml  NCAAWBracket2021.yaml  NCAAWBracket2022.yaml  NCAAWBracket2023.yaml
NCAABracketMaker/SimBrackets/: Sim_Bracket.xlsx
NCAABracketMaker/TeamData/: menscollegebasketball2021.csv  menscollegebasketball2021_1_1.1_0_1.csv  womenscollegebasketball2021.csv
TeamData/: TeamData.csv  menscollegebasketball2021.csv  womenscollegebasketball2021.csv
src/NCAABracketMaker/: AnalyzeGame.py  BracketBuilder.py  MLCode.py  MLCoefficients.py  TeamData.py  __init__.py  main.py  utilities.py
tests/: test_NCAABracketMaker.py  testsim.csv
tests/TestDocs/: testdata.csv
