[metadata]
name = NCAABracketMaker
version = 1.1.0
author = Alex Hill
author_email =
description = Generates simulated NCAA March Madness bracket results
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hillaxj/NCAABracketMaker
license = MIT
licence_file = LICENSE
project_urls =
    Source = https://github.com/hillaxj/NCAABracketMaker
    Bug Tracker = https://github.com/hillaxj/NCAABracketMaker/issues
classifiers =
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 1 - Alpha
    Environment :: IDE
    Intended Audience :: Science/Research
    Topic :: Utilities

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    pandas>=1.1.0
    pip>=9
    setuptools>=61
    setuptools_scm>=6.4
    pyyaml>=5.3
    requests>=2.27.0
    numpy>=1.22.0
    BeautifulSoup4>=4.10.0
    openpyxl>=3.0.9
python_requires = >=3.6
setup_requires =
    setuptools_scm
#    packages=NCAABracketMaker
#    package_dir={'NCAABracketMaker': 'NCAABracketMaker'},
#    package_data={'NCAABracketMaker': ["data/*.*"]},
package_dir =
    src

[options.packages.find]
where = src